# postmortem

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
postmortem/: __init__.py  __main__.py  cli.py  models.py  pipeline.py
postmortem/collectors/: __init__.py  git.py  hotspot.py  sentry.py
postmortem/renderers/: __init__.py  markdown.py  terminal.py
postmortem/utils/: __init__.py  time.py
tests/integration/: __init__.py  test_git_collector.py
tests/unit/: __init__.py  test_models.py  test_renderers.py  test_time.py
